Pictures copyright info + CSS z-index fixes

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,11 +5,8 @@
   display: none;
   width: 100%;
   height: $layout-md + $spacing-xs + $spacing-xs;
-  // background-color: $color-brand-primary;
   background-color: white;
-  // box-shadow: $elevation-low;
-  // position: fixed;
-  z-index: 2;
+  z-index: 10;
   left: 0;
   top: 0;
   display: none;
