--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -7,7 +7,7 @@
   background-color: $color-background-light-primary;
   box-shadow: $elevation-highest;
   position: fixed;
-  z-index: 2;
+  z-index: 10;
   left: 0;
   top: 0;
   display: flex;
